# cnova_lists

./: CMakeLists.txt  main.cpp
brum_cuts/: brum_cuts.cpp  brum_cuts.h
list/: list.cpp  list.h
